--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>Thanh</title>
+  <title>Thanh portfolio</title>
   <link rel="manifest" href="manifest.json">
 
   <style>
