--- a/web/index.html
+++ b/web/index.html
@@ -107,6 +107,11 @@
     }
   </script>
   <script src="main.dart.js" type="application/javascript"></script>
+  <!-- Firebase JavaScript SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.6/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.6/firebase-firestore.js"></script>
+  <!-- Add other Firebase services as needed (e.g., authentication) -->
+
 </body>
 
 </html>
