--- a/web/index.html
+++ b/web/index.html
@@ -25,8 +25,11 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="icon" type="image/png" href="favicon.ico" />
 
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <title>Thanh portfolio</title>
   <link rel="manifest" href="manifest.json">
 
@@ -108,10 +111,23 @@
   </script>
   <script src="main.dart.js" type="application/javascript"></script>
   <!-- Firebase JavaScript SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.6/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.6/firebase-firestore.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/10.3.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script> -->
   <!-- Add other Firebase services as needed (e.g., authentication) -->
+  <script>
+  // const firebaseConfig = {
+  //   apiKey: "AIzaSyDFE2VU8smsUO66UcZ6JRR-QLZcOVchX1k",
+  //   authDomain: "portfolio-dd598.firebaseapp.com",
+  //   projectId: "portfolio-dd598",
+  //   storageBucket: "portfolio-dd598.appspot.com",
+  //   messagingSenderId: "1065787546688",
+  //   appId: "1:1065787546688:web:a9fe74c32c8131b14bd3a5",
+  //   measurementId: "G-V77JRJ3ZPL"
+  // };
 
+  //   // Initialize Firebase
+  //   firebase.initializeApp(firebaseConfig);
+  </script>
 </body>
 
 </html>
